修改脚本